src/styles/responsive.scss
@media only screen and (min-width: 1500px) {
	.polytronome {
		&.easy .clicks {
			min-width: 1100px;
		}
	}
}

@media only screen and (max-width: 1600px) {
	.polytronome {
		.spacer,
		.menu {
			min-width: auto;
		}
	}
}

@media only screen and (min-height: 900px) and (max-width: 1500px) {
	.polytronome {
		.layers-table-wrap {
			.layers-table {
				width: auto;
				flex-direction: column;

				.ls-row {
					flex-direction: row;
				}
			}
		}

		&.easy {
			.layers-table-wrap .layers-table {
				flex-wrap: wrap;
				justify-content: flex-start;
				justify-content: center;

				.ls-row {
					padding: 0;
				}
			}
		}

		.menu,
		main {
			padding-top: 5vh;
		}
	}
}

@media only screen and (max-height: 900px) and (max-width: 1440px) {
	body {
		font-size: 13px;
	}

	.polytronome.easy main,
	.polytronome main,
	.menu {
		padding-top: 5vh;
	}
}

@media only screen and (max-height: 750px), (max-width: 1200px) {
	body {
		font-size: 11px;
	}
}

// Width small but height is enough to make it in rows
@media only screen and (max-width: 1000px) and (min-height: 780px) {
	.polytronome {
		.layers-table {
			flex-direction: column;
			.ls-row {
				flex-direction: row;
				margin: 0.5em;
				padding: 0.5em 1em;
			}
		}
	}
}

// Width too small for advanced, but height too small for ls-row as rows
@media only screen and (max-width: 1000px) and (max-height: 780px) {
	body {
		font-size: 10px;
	}
}

@media only screen and (max-width: 900px) {
	.polytronome {
		.header .tempo .tap {
			width: 6em;
		}
	}
}

@media only screen and (max-width: 425px) {
	body {
		font-size: 9px;
	}

	.polytronome {
		main {
			padding-top: 5vh;
			width: 100vw;

			.header {
				.logo {
					width: 100%;
					justify-content: center;

					svg {
						transform: scale(0.6);
					}
				}
			}

			.clicks {
				width: 90vw;
				margin: 2em;
			}
		}

		.bottom-buttons {
			flex-wrap: wrap;
			.start {
				width: 16em;
			}
		}

		.layers-table-wrap {
			.layers-table {
				.ls-row {
					padding: 0em 1em;
					margin: 0.5em;
				}

				.ls-type {
					min-width: 5em;

					svg {
						width: 3.4em;
						height: 3.4em;
						padding: 0 1em;
					}
				}

				.ls-effects {
					text-align: left;
					flex-direction: column;
					max-width: 7em;
				}

				.ls-volume {
					flex-direction: column;

					.mute {
						padding: 0;
						margin-bottom: 1em;
					}

					.range-wrap {
					}
				}
			}

			.tempo {
				display: flex;
				align-items: center;
				justify-content: center;
				margin-bottom: 80px;
				width: 100%;

				.tap {
					margin-left: 10px;
				}
			}
		}

		&.easy {
			.layers-table-wrap .layers-table {
				width: 24em;
				margin: 6em 0;
				flex-wrap: wrap;
				justify-content: space-around;
				justify-content: flex-start;

				.ls-row {
					margin: 0;
				}
			}
		}
	}
}

/*
MOBILE responsive with class
specific to .mobile render changes
*/

.polytronome.mobile {
	overflow-y: auto;

	main {
		padding: 0;
	}

	.layers-table-wrap,
	.layers-table {
		flex-direction: column;

		.ls-row {
			flex-direction: row;
		}
	}

	.header {
		.tutorial {
			top: 0;
			right: 0;
			height: auto;
			flex-direction: column;
			padding: 2em;
			margin: 2em;
			z-index: 6;

			.dialog {
				margin: 0;
			}

			.interactions {
				flex-direction: row;
			}
		}
	}

	.menu {
		position: fixed;
		top: 0;
		left: 0;
		margin: 0;
		padding-top: 0;
		font-size: 11px;
		z-index: 5;

		> button {
			position: fixed;
			margin: 2em;
			padding: 0.8em 2em;
			z-index: 6;
		}

		aside {
			position: fixed;
			display: none;
			z-index: 5;
			margin: 0;
			top: 0;
			left: 0;
			padding: 8vh 0;

			&.extended {
				display: flex;
				width: calc(100vw - 8em);
				padding: 8em 4em 0 4em;
				height: 100vh;
				background-color: var(--background);
				overflow-y: auto;
				opacity: 1;

				.theme-list {
					display: none;
				}
			}
		}
	}
}

